# mbfautoshop

./: .gitignore  db.sqlite3  hello.py  manage.py  pyproject.toml
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
finance/payments/: admin.py  apps.py  forms.py  models.py  schemas.py  urls.py  views.py
finance/payments/migrations/: 0001_initial.py  0002_income_payment_type_alter_payment_sale.py  0003_expense.py  0004_alter_payment_date.py
finance/purchases/: admin.py  apps.py  forms.py  models.py
finance/purchases/migrations/: 0001_initial.py  0002_alter_purchase_re_stocks.py
finance/sales/: api.py  apps.py  forms.py  models.py  schemas.py  urls.py  views.py
finance/sales/migrations/: 0001_initial.py  0002_remove_sale_customer_remove_sale_total_amount_and_more.py  0003_remove_saleitem_quantity.py  0004_alter_sale_date.py  0005_remove_saleitem_unit_price.py  0006_remove_saleitem_part.py
inventory/parts/: admin.py  api.py  apps.py  forms.py  models.py  schemas.py  urls.py  views.py
inventory/parts/migrations/: 0001_initial.py  0003_rename__type_part_type.py  (+5 more)
inventory/stock/: apps.py  forms.py  models.py  schemas.py  signals.py  urls.py  views.py
inventory/suppliers/: apps.py  forms.py  models.py  urls.py  views.py
mbf_auto_shop/: .env  appsConfig.py  asgi.py  settings.py  urls.py  wsgi.py
mbf_auto_shop/templates/: __init__.html  __layout__.html
misc/api/: api.py  apps.py  urls.py
misc/pages/: apps.py  urls.py  views.py
people/customers/: apps.py  forms.py  models.py  urls.py  views.py
(+34 files in other folders)
